# PoliNLP

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.sh
.github/workflows/: cd.yml  ci.yml
data/: readme.md
data/prepro/: readme.md  trajectoires_beneficiares_minimas_sociaux.parquet
data/preprocessed/: readme.md
data/raw/: readme.md
notebooks /: eda.ipynb
polinlp/: data_quality_check.py  eda.py  etl_api.py
tests/: test_eda.py  test_etlapi.py
