[project]
name = "polinlp"
version = "0.1.0"
description = ""
authors = [
    {name = "Romain-DengGueret", email = "romain.dengueret@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"  # Modifier ici pour compatibilité avec SpaCy
dependencies = [
    "polars (>=1.21.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "spacy (>=3.8.4,<4.0.0)"  # Ajouter SpaCy
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

